--- a/setup.cfg
+++ b/setup.cfg
@@ -11,11 +11,13 @@ enable-extensions = G
 isort-show-traceback = True
 
 ignore =
-  
+  # it is ok to have some magical numbers here
+  WPS432
+  S311
 
 per-file-ignores =
   # it is possibble to have prints in scripts
-  
+  brain_games/scripts/*.py: WPS421
 
 [tool:pytest]
 norecursedirs = __pycache__
